src/objects/Flash_Card__c.object
<CustomObject>
    <description>This is the FlashCardObject</description>
    <fields>
        <fullName>CT_Id__c</fullName>
        <caseSensitive>true</caseSensitive>
        <externalId>true</externalId>
        <label>CT Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Campaign_Status__c</fullName>
        <inlineHelpText>Color of Status Flag</inlineHelpText>
        <label>Campaign Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Compliance_Issue__c</fullName>
        <label>Compliance Issue</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <label>Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Flash_Score_Flag__c</fullName>
        <formula>Case (LOWER(Campaign_Status__c),
&quot;green&quot;, IMAGE(&quot;/img/msg_icons/confirm16.png&quot;, &quot;green&quot;),
&quot;yellow&quot;, IMAGE(&quot;/img/msg_icons/warning16.png&quot;,&quot;yellow&quot;),
&quot;red&quot;, IMAGE(&quot;/img/msg_icons/error16.png&quot;,&quot;red&quot;),
&quot;No Status Flag&quot;
)</formula>
        <label>Flash Score Flag</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Steps__c</fullName>
        <label>Next Steps</label>
        <length>3000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PPM_Contact__c</fullName>
        <label>PPM Contact</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PPM_Explanation__c</fullName>
        <label>PPM Explanation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RARE_Campaign__c</fullName>
        <label>RARE Campaign</label>
        <referenceTo>RARE_Campaign__c</referenceTo>
        <relationshipLabel>Flash Cards</relationshipLabel>
        <relationshipName>Flash_Cards</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>36</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Unmet_Compliance_Issues__c</fullName>
        <label>Unmet Compliance Issues</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Flash Card</label>
    <nameField>
        <displayFormat>FC-{0000}</displayFormat>
        <label>Flash Card ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Flash Cards</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>